--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.2",
     "nanoid": "^3.1.30",
     "prop-types": "^15.8.0",
+    "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
