--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.2",
     "axios": "^0.24.0",
+    "babel-plugin-import": "^1.13.3",
+    "customize-cra": "^1.0.0",
     "express": "^4.17.2",
     "nanoid": "^3.1.30",
     "prop-types": "^15.8.0",
     "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
